🧰 update icons + fix spacing

--- a/modules/home/HeroHome.module.scss
+++ b/modules/home/HeroHome.module.scss
@@ -30,15 +30,12 @@
     flex-direction: column;
     justify-content: center;
     padding: 3rem 0;
+    gap: 1rem;
 
     @media (max-width: 1200px) {
       flex: 0;
       justify-content: flex-start;
       padding: 1rem 0;
-    }
-
-    @media (max-width: 768px) {
-      gap: 1rem;
     }
 
     h1 {
@@ -71,6 +68,10 @@
       font-size: 1.25rem;
       font-weight: 500;
       color: var(--dark-moon);
+
+      @media (max-width: 768px) {
+        width: 100%;
+      }
 
       @media (max-width: 480px) {
         text-align: center;
