--- a/modules/speaking/TalksList.module.scss
+++ b/modules/speaking/TalksList.module.scss
@@ -22,6 +22,7 @@
       font-weight: 700;
       margin-bottom: 1rem;
       text-align: center;
+      text-wrap: balance;
 
       &:after {
         content: '';
@@ -38,6 +39,8 @@
     }
 
     .details {
+      overflow: hidden;
+      width: 100%;
       display: flex;
       justify-content: space-between;
       gap: 3rem;
@@ -52,7 +55,25 @@
         }
       }
 
-      p {
+      .infos {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        a {
+          width: fit-content;
+          border-radius: 30px;
+          border: 2px solid transparent;
+          padding: 0.5rem 2rem;
+          background-color: #4eb9a5;
+        }
+      }
+
+      .description {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        -webkit-line-clamp: 7;
         font-size: 1.1rem;
         font-weight: 400;
         line-height: 1.5;
